fix horizontal scroll on trading page - mobile safari

--- a/src/sass/app/trade.scss
+++ b/src/sass/app/trade.scss
@@ -642,6 +642,7 @@
     }
     #trading_socket_container #contract_prices_container .price_container .price_wrapper {
         width: 100%;
+        box-sizing: border-box;
 
         &.small {
             width: auto;
